--- a/src/styles/prestation.scss
+++ b/src/styles/prestation.scss
@@ -83,6 +83,7 @@
     align-items: center;
     gap: 60px;
     margin-top: 208px;
+    max-width: 100%;
 
     &_img {
       width: 800px;
